jsonrpc-types/src/snapshots/jsonrpc_types__notification__tests__notification_serde.snap
---
source: jsonrpc-types/src/notification.rs
expression: "Notification::new(\"method\", ())"
---
{
  "jsonrpc": "2.0",
  "method": "method",
  "params": null
}
